smartwallet-api-release/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketdata-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smartwallet-api
  template:
    metadata:
      labels:
        app: smartwallet-api
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: smartwallet-api
        image: smartwallet.azurecr.io/marketdata-api:__tag__
        ports:
        - containerPort: 19000
          name: smartwallet-api
