smartwallet-api-release/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  smartwallet-api-service
spec:
  selector:
    app: smartwallet-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 19000
