smartwallet-api-release/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smartwallet-api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/server-alias:  smartwallet-api.0053523ec98a4fc5b6a7.eastus.aksapp.io
spec:
  rules:
  - host: smartwallet-api.0053523ec98a4fc5b6a7.eastus.aksapp.io
  - http:
      paths:
      - backend:
          serviceName: smartwallet-api-api-service
          servicePort: 80
        path: /
